@startuml class - services
skinparam linetype polyline

title Class Diagrams - Services (serveur backend)

package services {
    package service_ai_analysis {

        package models {
            class ProjectAnalysis {
                +gitUrl: str
                +files: [FileContent]
            }

            class FileContent {
                +url: str
                +content: str
            }

            class ProjectFile {
                +gitUrl: str
                +content: str
            }

            ProjectAnalysis --> FileContent
        }

        package routers {
            class analysis_router {
                +predict_req(project)
                +analyze_project_req(analysis)
            }
        }

        note left of  analysis_router
            POST /predict
            POST /analyzeProject
        end note

        package services {
            class analysis_service {
                +predict_file_densities(github_url, fileContent)
                +analyze_project(github_url, project_files)
            }
        }

        analysis_router -d-> ProjectAnalysis
        analysis_router -d-> ProjectFile
        analysis_router -u-> analysis_service
    }

    package service_model_creation {
        package models {
            class JavaProject {
                +url: str
            }
        }

        package routers {
            class model_router {
                +create_model_req
            }
        }

        note right of  model_router
            POST /create
        end note

        package services {
            class model_service {
                +create_model(project_url)
            }
        }

        model_router --> JavaProject
        model_router -u-> model_service
    }

    package service_log_improvement {
        package rest {
            class ollama_client{
                +pull_model(model)
                +def generate(prompt, model)
            }
        }

        package routers{
            class analysis_router{
                +def improve_logs_be(diff, context)
                +get_modified_logs_from_diff(diff)
                +get_prompt_from_template()
                +get_surrounding_lines_from_file(file_content, line_number, context_lines)
                +improve_logs(request)
            }
            class LogImprovementRequest{
                +diff: str
                +context: str
            }
        }

        note right of   services.service_log_improvement.routers.analysis_router
            POST /improve-logs
        end note

        services.service_log_improvement.routers.analysis_router -u-> ollama_client
        
        services.service_log_improvement.routers.analysis_router -u-> LogImprovementRequest
    }
}

@enduml